bugfix for viewing groups and mail background for dark mode

--- a/app/assets/stylesheets/application-mailer.scss
+++ b/app/assets/stylesheets/application-mailer.scss
@@ -4,7 +4,7 @@
 @media (prefers-color-scheme:  dark) {
   html, body {
     font-family: sans-serif;
-    //background-color: #f7f7f7;
+    background-color: #f7f7f7;
     font-weight: 300;
 
     p {color: 333;}
